@@ -337,12 +337,24 @@ inline Point coerce_Point(PyObject* obj) {
   if (PySequence_Check(obj)) {
     if (PySequence_Length(obj) == 2) {
       py_x0 = PySequence_GetItem(obj, 0);
+      if (!PyInt_Check(py_x0)) {
+        Py_DECREF(py_x0);
+        PyErr_Clear();
+        PyErr_SetString(PyExc_TypeError, "First list entry in Point is not an int");
+        throw std::invalid_argument("First list entry in Point is not an int");
+      }
       py_x1 = PyNumber_Int(py_x0);
       Py_DECREF(py_x0);
       if (py_x1 != NULL) {
         long x = PyInt_AsLong(py_x1);
         Py_DECREF(py_x1);
         py_y0 = PySequence_GetItem(obj, 1);
+        if (!PyInt_Check(py_y0)) {
+          Py_DECREF(py_y0);
+          PyErr_Clear();
+          PyErr_SetString(PyExc_TypeError, "Second list entry in Point is not an int");
+          throw std::invalid_argument("Second list entry in Point is not an int");
+        }
         py_y1 = PyNumber_Int(py_y0);
         Py_DECREF(py_y0);
         if (py_y1 != NULL) {
@@ -1252,6 +1264,11 @@ inline PointVector* PointVector_from_python(PyObject* py) {
       Point p = coerce_Point(point);
       cpp->push_back(p);
     }
+  } catch (std::invalid_argument e) {
+    delete cpp;
+    Py_DECREF(seq);
+    PyErr_SetString(PyExc_TypeError, e.what());
+    return 0;
   } catch (std::exception e) {
     delete cpp;
     Py_DECREF(seq);
